<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSendTo">

    <LinearLayout
        android:id="@+id/loEditSendTo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="165dp">

        <Button
            android:id="@+id/btnEditSendToDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnDone" />

        <TextView
            android:id="@+id/tvEditSendToLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvEditSendToLabel" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="250dp"
            android:layout_height="68dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="phone"
            android:text="@string/phoneEg"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
