<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <LinearLayout
        android:id="@+id/loLinearVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loLinearHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnSend" />

            <Button
                android:id="@+id/btnEditMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnEditMessage"
                android:onClick="HandleButtonClick"/>
            <Button
                android:id="@+id/btnEditSendTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnEditSendTo" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvMessageDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Hello World!" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
